# piscine-cybersec

module00/ex00/: spider.py
module00/ex01/: requirements.txt  scorpion.py
module01/ex00/: CMakeLists.txt
module01/ex00/includes/: ft_otp.h
module01/ex00/srcs/: encrypt_key.cpp  main.cpp  options.cpp
module02/: Dockerfile  index.html  nginx.conf  sshd_config  start.sh  torrc
module03/binary/easy/: procedure.txt  source.c
module03/binary/medium/: nasm.asm  source.c
module04/: CMakeLists.txt
module04/inc/: stockholm.h
module04/key/: key.key
module04/src/: decrypt.c  encrypt.c  stockholm.c
